# make-alternative-versions

./: .clang-format  .gitignore  CMakeLists.txt
src/: cmakeConfig.hpp.in  main.cpp  myExceptions.hpp  utils.hpp
